--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hallo"]
-	path = themes/hallo
-	url = https://github.com/EmielH/hallo-hugo.git
+[submodule "themes/roxo"]
+	path = themes/roxo
+	url = https://github.com/StaticMania/roxo-hugo.git
