--- a/config.yaml
+++ b/config.yaml
@@ -1,33 +1,56 @@
 baseURL: http://smirlwebs.com/
 languageCode: en-us
 title: Alex Williams - smirlwebs.com
-theme: hallo
+theme: roxo
 
-disableKinds: ["page", "section", "taxonomy", "taxonomyTerm"]
+disableKinds: ["taxonomy", "taxonomyTerm"]
 author:
   name: "Alex Williams"
 
+menu:
+  nav:
+    - identifier: home
+      name: Home
+      url: /
+    # - identifier: blog
+    #   name: Blog
+    #   url: /blog/
+
 params:
-  links:
-    - icon: "github"
-      title: "Github"
-      url: "https://github.com/smirl"
+  banner:
+    enable: true
+    background_color: "#6fcdbd"
 
-    - icon: "instagram"
-      title: "Instagram"
-      url: "https://www.instagram.com/smirlie/"
+  footer:
+    sitemap:
+      title: "Sitemap"
+      link:
+        - name: Home
+          url: /
+        # - name: Blog
+        #   url: /blog/
 
-    - icon: "linkedin"
-      title: "LinkedIn"
-      url: "https://www.linkedin.com/in/alexander-williams-5aa36761/"
+    social:
+      title: Social Media
+      link:
+        - icon: "github"
+          name: "Github"
+          url: "https://github.com/smirl"
 
-    - iconorigin: "ai"
-      iconset: "ai"
-      icon: "google-scholar"
-      title: "Google Scholar"
-      url: "https://scholar.google.com/citations?hl=en&user=aAw2Qe4AAAAJ"
+        - icon: "instagram"
+          name: "Instagram"
+          url: "https://www.instagram.com/smirlie/"
 
-colors:
-  background: "#81c6ff"
-  foreground: "#edf7ff"
-  hover: "#ffba82"
+        - icon: "linkedin"
+          name: "LinkedIn"
+          url: "https://www.linkedin.com/in/alexander-williams-5aa36761/"
+
+        - iconorigin: "ai"
+          iconset: "ai"
+          icon: "google-scholar"
+          name: "Google Scholar"
+          url: "https://scholar.google.com/citations?hl=en&user=aAw2Qe4AAAAJ"
+
+    service:
+      title: ""
+      description: made with ❤️
