Use https in baseURL

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://smirlwebs.com/
+baseURL: https://smirlwebs.com/
 languageCode: en-us
 title: Alex Williams - smirlwebs.com
 theme: roxo
