More blog content. Better h2. Markup classes

--- a/config.yaml
+++ b/config.yaml
@@ -50,3 +50,10 @@ params:
 
 pygmentsCodeFences: true
 pygmentsStyle: dracula
+
+markup:
+  goldmark:
+    parser:
+      attribute:
+        block: true
+        title: true
